--- a/index.html
+++ b/index.html
@@ -7,9 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lihazi portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <section class="top-banner">
+
+        <div class="header-left">
+
+            <h1>Welcome to</h1>
+
+            <h1><span class="name">Abid Lihazi</span> World</h1>
+
+            <h3>Building Climber and Train Stopper</h3>
+
+            <p>
+                You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
+                Hero.
+            </p>
+
+            <a class="hire-button" href="https://www.linkedin.com/feed/?trk=cold_join_sign_in" target="_blank">Hire
+                me</a>
+
+        </div>
+
+        <div class="header-right">
+
+            <img src="images/my-bg.png" alt="">
+
+        </div>
+
+    </section>
 
 </body>
 
