--- a/index.html
+++ b/index.html
@@ -43,6 +43,29 @@
 
     </section>
 
+
+    <section class="dream-big">
+
+        <div class="dream-left">
+
+            <img src="images/my-bg2.png" alt="">
+
+        </div>
+
+        <div class="dream-right">
+
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>
+                I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <a class="download-button" href="#" target="_blank">Download Resume</a>
+
+        </div>
+    </section>
+
 </body>
 
 </html>
